cambio el color rosa

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@ body {
 	padding:10px;
 	background-color:grey;
 	}
+.caja2{
+	width:100px;
+	height:100px;
+	padding:10px;
+	background-color:pink;
+	}
